Add responsive navbar with hamburger menu functionality

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,8 +20,27 @@
     <header class="navbar">
       <div class="wrapper-container">
         <div class="logo">
-          <img src="assets/icon1.jpg" alt="logo" /> HealthView
+          <img src="assets/icon1.jpg" alt="logo" />
+          <span>HealthView </span>
         </div>
+        <button class="hamburger">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="lucide lucide-menu-icon lucide-menu"
+          >
+            <path d="M4 5h16" />
+            <path d="M4 12h16" />
+            <path d="M4 19h16" />
+          </svg>
+        </button>
         <nav>
           <ul>
             <li><a href="#">Home</a></li>
@@ -124,4 +143,5 @@
       </footer>
     </div>
   </body>
+  <script src="./js/index.js"></script>
 </html>
