--- a/frontend/index.html
+++ b/frontend/index.html
@@ -62,8 +62,11 @@
             View medical progress, analyze reports, and receive smart health
             suggestions.
           </p>
-          <a href="register.html" class="btn-primary">Get Started</a>
-          <a href="#preview" class="btn-secondary">View Demo</a>
+
+          <div class="ctx-btn-wrapper">
+            <a href="register.html" class="btn-primary">Get Started</a>
+            <a href="#preview" class="btn-secondary">View Demo</a>
+          </div>
         </div>
         <div class="hero-image">
           <img src="assets/medical_dashboard.png" alt="Health Dashboard" />
